Fixed gaps between heading and pictures

--- a/styles.css/contact.css
+++ b/styles.css/contact.css
@@ -106,20 +106,21 @@ h2 {
     font-size: var(--h4-size);
     color: var(--san-julian-blue);
     opacity: 0.75;
-    margin-top: 0;   
-    padding-bottom: 24px; 
+    margin-top: 0;  
+    margin-bottom: 0; 
+    padding-bottom: 29.87px; 
     letter-spacing: 32;
     width: 327px;
 }
 
 .brands {
-    max-width: 279.15px;
+    width: 100%;
     height: 154px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0 48px 24px 24px;
+    margin: 0;
     row-gap: 35px;
     
     padding-right:24px;
@@ -134,13 +135,16 @@ h2 {
 
 .row1 {
     padding-top: 5.87px;
+    height: 26px;
     gap: 40px;
 }
 .row2 { 
-    gap: 40px
+    gap: 40px;
+    height: 22px;
 }
 .row3 {
     gap: 71.54px;
+    height: 27px;
 }
 
 svg {
